# 20230330oop_task_tests

./: .gitignore  pyproject.toml  readme.md
classes/: task_class.py
